# c_lexer

./: CMakeLists.txt  LICENSE  README.md  b
.github/workflows/: cmake-single-platform.yml
app/: CMakeLists.txt  main.c  main.cpp
cmake/config/: config.h.in
cmake/export/: c_lexer-config-version.cmake.in  c_lexer-config.cmake.in
cmake/modules/: MyProjCompiler.cmake  MyProjGit.cmake
include/c_lexer/: Lexer.h  Token.h
libs/: CMakeLists.txt
libs/c_lexer/: CMakeLists.txt  Lexer.cpp  Token.cpp
libs/module/: CMakeLists.txt  SomeConcrete.h  mlib.cpp  mlib.h
libs/shared/: CMakeLists.txt  slib.cpp  slib.h
libs/static/: CMakeLists.txt  arch.c  arch.h
scripts/: cc.py  coverage  keywords.py
tests/: CMakeLists.txt  example_test.cpp  src  test_Lexer.cpp  test_Token.cpp  test_main.cpp  test_myarch.cpp  test_mycapp.cpp  test_mycxxapp.cpp  test_mymod.cpp  test_myslib.cpp  tests.cpp
tests/include/tests/: tests.h
